--- a/CSS/main.css
+++ b/CSS/main.css
@@ -18,11 +18,11 @@ body {
 }
 /* container styles */
 .container {
-  /* width: 600px; */
+  /* width: 600px; 
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
-  margin-right: auto;
+  margin-right: auto;*/
 }
 /* Small */
 @media (min-width: 768px) {
